Added grid to header

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <header>
-        <input type="text">
-        <span>Morgan Oakley</span>
-        <h6>Hi there,</h6>
-        <h3>Morgan Oakley(@morgan)</h3>
-        <button>New</button>
-        <button>Upload</button>
-        <button>Share</button>
+        <div class="upper_row">
+            <input type="text">
+            <span class="name">Morgan Oakley</span>
+        </div>
+        <div class="lower_row">
+            <h6>Hi there,</h6>
+            <h3>Morgan Oakley(@morgan)</h3>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
     </header>
     <aside>
         <h2>Dashboard</h2>
