--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <div class="upper_row">
+            <img src="./icons/magnify.svg" alt="search_icon">
             <input type="text">
+            <img src="./icons/bell-ring.svg" alt="notification_icon">
             <span class="name">Morgan Oakley</span>
         </div>
         <div class="lower_row">
@@ -21,15 +23,25 @@
         </div>
     </header>
     <aside>
+        <img src="./icons/view-dashboard.svg" alt="dashboard_icon">
         <h2>Dashboard</h2>
+        <img src="./icons/home.svg" alt="home_icon">
         <span>Home</span>
+        <img src="./icons/card-account-details.svg" alt="card_icon">
         <span>Profile</span>
+        <img src="./icons/message-reply.svg" alt="message_icon">
         <span>Messages</span>
+        <img src="./icons/history.svg" alt="history_icon">
         <span>History</span>
+        <img src="./icons/file-multiple.svg" alt="tasks_icon">
         <span>Tasks</span>
+        <img src="./icons/account-group.svg" alt="communities_icon">
         <span>Communities</span>
+        <img src="./icons/cog.svg" alt="cog_icon">
         <span>Settings</span>
+        <img src="./icons/help-box-outline.svg" alt="support_icon">
         <span>Support</span>
+        <img src="./icons/shield-check.svg" alt="privacy_icon">
         <span>Privacy</span>
     </aside>
     <section id="your_projects">
@@ -41,6 +53,11 @@
                 Suspendisse sollicitudin nibh erat, id
                 facillisis felis accumsan nec.
             </p>
+            <div class="icons">
+                <img src="./icons/star-plus-outline.svg" alt="star_icon">
+                <img src="./icons/eye-plus-outline.svg" alt="eye_icon">
+                <img src="./icons/source-fork.svg" alt="source_icon">
+            </div>
         </div>
         <div>
             <div></div>
