Added style to sidebar

--- a/index.html
+++ b/index.html
@@ -23,26 +23,50 @@
         </div>
     </header>
     <aside>
-        <img src="./icons/view-dashboard.svg" alt="dashboard_icon">
-        <h2>Dashboard</h2>
-        <img src="./icons/home.svg" alt="home_icon">
-        <span>Home</span>
-        <img src="./icons/card-account-details.svg" alt="card_icon">
-        <span>Profile</span>
-        <img src="./icons/message-reply.svg" alt="message_icon">
-        <span>Messages</span>
-        <img src="./icons/history.svg" alt="history_icon">
-        <span>History</span>
-        <img src="./icons/file-multiple.svg" alt="tasks_icon">
-        <span>Tasks</span>
-        <img src="./icons/account-group.svg" alt="communities_icon">
-        <span>Communities</span>
-        <img src="./icons/cog.svg" alt="cog_icon">
-        <span>Settings</span>
-        <img src="./icons/help-box-outline.svg" alt="support_icon">
-        <span>Support</span>
-        <img src="./icons/shield-check.svg" alt="privacy_icon">
-        <span>Privacy</span>
+        <div class="dashboard_icon">
+            <img src="./icons/view-dashboard.svg" alt="dashboard_icon">
+            <span>Dashboard</span>
+        </div>
+        <div class="upper_icons">
+            <div class="icon">
+                <img src="./icons/home.svg" alt="home_icon">
+                <span>Home</span>
+            </div>
+            <div class="icon">
+                <img src="./icons/card-account-details.svg" alt="card_icon">
+                <span>Profile</span>
+            </div>
+            <div class="icon">
+                <img src="./icons/message-reply.svg" alt="message_icon">
+                <span>Messages</span>
+            </div>
+            <div class="icon">
+                <img src="./icons/history.svg" alt="history_icon">
+                <span>History</span>
+            </div>
+            <div class="icon">
+                <img src="./icons/file-multiple.svg" alt="tasks_icon">
+                <span>Tasks</span>
+            </div>
+            <div class="icon">
+                <img src="./icons/account-group.svg" alt="communities_icon">
+                <span>Communities</span>
+            </div>
+        </div>
+        <div class="lower_icons">
+            <div class="icon">
+                <img src="./icons/cog.svg" alt="cog_icon">
+                <span>Settings</span>
+            </div>
+            <div class="icon">
+                <img src="./icons/help-box-outline.svg" alt="support_icon">
+                <span>Support</span>
+            </div>
+            <div class="icon">
+                <img src="./icons/shield-check.svg" alt="privacy_icon">
+                <span>Privacy</span>
+            </div>
+        </div>
     </aside>
     <section id="your_projects">
         <h4>Your Projects</h4>
