Added grid to the header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <header>
-        <div class="upper_row">
+        <div class="upper_row_input">
             <img src="./icons/magnify.svg" alt="search_icon">
             <input type="text">
+        </div>    
+        <div class="upper_row_picture">
             <img src="./icons/bell-ring.svg" alt="notification_icon">
+            <img class="cat_icon" src="./icons/cat_1.svg" alt="cat_icon">
             <span class="name">Morgan Oakley</span>
         </div>
-        <div class="lower_row">
-            <h6>Hi there,</h6>
-            <h3>Morgan Oakley(@morgan)</h3>
+        <img class="cat_icon_lower" src="./icons/cat_1.svg" alt="cat_icon">
+        <span class="first_span">Hi there,</span>
+        <span class="second_span">Morgan Oakley(@morgan)</span>
+        </div>
+        <div class="lower_row_buttons">    
             <button>New</button>
             <button>Upload</button>
             <button>Share</button>
