Add style to announcements section

--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
     </section>
     <section id="announcements_and_treding">
         <h4>Announcements</h4>
-        <div>
-            <div>
+        <div class="announcements">
+            <div id="first_announcement" class="announcement">
                 <h5>Site Maintenance</h5>
                 <p>Pellentesque maximus diam ac nulla faucibus mattis. Sed dignissim eget neque id pretium.</p>
             </div>
-            <div>
+            <div id="second_announcement" class="announcement">
                 <h5>Community Share Day</h5>
                 <p>Donec fermentum, orci et tempor venenatis, tortor tellus sollicitudin nisi, eget condimentum quam massa vitae est. </p>
             </div>
-            <div>
+            <div id="third_announcement" class="announcement">
                 <h5>Updated Privacy Policy</h5>
                 <p>Fusce nec dolor dolor. Nam quis mi sodales, commodo nisl id, varius nisl. Nulla sit amet dui a nibh suscipit mollis at quis tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
             </div>
