Added style to trending section

--- a/index.html
+++ b/index.html
@@ -172,21 +172,25 @@
                 <p>Fusce nec dolor dolor. Nam quis mi sodales, commodo nisl id, varius nisl. Nulla sit amet dui a nibh suscipit mollis at quis tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
             </div>
         </div>
-        <h4>Trending</h4>
-        <div>
-            <div>
+        <h4 id="trending_title">Trending</h4>
+        <div class="trendings">
+            <div class="first_trend">
+                <img class="cat_trend_img" src="./icons/cat_1.svg" alt="icon">
                 <span>@tegan</span>
                 <p>World Peace Builder</p>
             </div>
-            <div>
+            <div class="second_trend">
+                <img class="cat_trend_img" src="./icons/cat_1.svg" alt="icon">
                 <span>@morgan</span>
                 <p>Super Cool Project</p>
             </div>
-            <div>
+            <div class="third_trend">
+                <img class="cat_trend_img" src="./icons/cat_1.svg" alt="icon">
                 <span>@kendall</span>
                 <p>Life Changing App</p>
             </div>
-            <div>
+            <div class="fourth_trend">
+                <img class="cat_trend_img" src="./icons/cat_1.svg" alt="icon">
                 <span>@alex</span>
                 <p>No Traffic Maker</p>
             </div>
